[project]
name = "joblin"
version = "0.1.0"
description = "Joblin — a gamification framework for chores: a Discord bot for chore logistics, reminders, and a family puntos economy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",  # already pulled in by discord.py; direct dep of joblin.web
    "discord.py>=2.4",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

# Intentionally no [build-system]: this is an application, not a library.
# `uv` will just manage the virtualenv + dependencies. Run it with:
#     uv run python -m joblin
